--- a/article.css
+++ b/article.css
@@ -117,17 +117,41 @@ main {
 }
 
 #content h2 {
-    font-size: 8rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    font-size: 5rem;
+    font-family: 'Niramit SemiBold', sans-serif;
+    color: #9F9E9E;
+}
+
+.article_hook {
+    font-size: 2rem;
+    padding-bottom: 2rem;
+    font-family: 'Roboto', sans-serif;
+}
+
+.article_photo {
+    border-radius: 4px;
+    border-top: 20px solid #e5e5e5;
+	box-shadow: 12px 12px 1px #d7d3e7;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+    height: 400px;
+    width: 700px;
+    overflow-y:hidden;
+    overflow-x:hidden;
 }
 
 .article_text {
     font-size: 2rem;
     padding-bottom: 2rem;
+    font-family: 'Roboto', sans-serif;
+    margin-left: 30px;
 }
 
-.article_heading {
-    font-size: 2rem;
-    
+.article_text li {
+    padding-bottom: 1rem;
+    font-weight: bolder;
 }
 
 /***** QUIZ SECTION *****/
